--- a/widget/templates/layouts/item-1.html
+++ b/widget/templates/layouts/item-1.html
@@ -1,6 +1,7 @@
 <div class="holder padding-zero text-overlay">
     <div class="media-center-plugin first-layout" id="backgroundImage">
         <div class="media-center-banner clearfix">
+            <h5 class="margin-top-zero word-break media-title">{{WidgetMedia.item.data.title}} <div data-ng-if="WidgetMedia.isDownloading(WidgetMedia.item)" class="lds-ring-small"></div></h5>
             <div ng-class="WidgetMedia.showVideo == false ? '' : 'video-container-background'"
                 style="max-height: {{(WidgetMedia.deviceWidth*9)/16+'px'}} !important;"
                 class="plugin-slider text-center">
@@ -27,15 +28,11 @@
         </div>
         <div class="item-main-header" ng-if="!WidgetMedia.fullScreen">
             <div class="text-left padded word-break">
-                <h5 class="margin-top-zero word-break">{{WidgetMedia.item.data.title}} <div data-ng-if="WidgetMedia.isDownloading(WidgetMedia.item)" class="lds-ring-small"><div></div><div></div><div></div><div></div></div></h5>
                 <p data-ng-if="WidgetMedia.item.data.hasDownloadedVideo" class="margin-bottom-zero word-break">Downloaded</p>
-                <p class="margin-bottom-zero word-break">{{WidgetMedia.item.data.summary}}</p>
 
-                <p id="viewsg" ng-if="showViewCount" class="ellipsis margin-zero" role="text" tabindex="0" aria-label="{{WidgetMedia.item.data.title}} view count {{WidgetMedia.count ? WidgetMedia.count : 0}}">{{WidgetMedia.count ? WidgetMedia.count : 0}}
-                    <span  style="float: left;margin-right: 5px;" aria-hidden="true">
-                        <i id="iconViewg" class="glyphicon glyphicon-eye-open"></i>
-                    </span>
-                </p>
+                <div id="mediaActionIcons" class="media-action-icons" ng-init="WidgetMedia.initMediaActionIcons()"></div>
+
+                <p class="margin-bottom-zero word-break">{{WidgetMedia.item.data.summary}}</p>
             </div>
         </div>
         <div class="padded padding-top-zero" ng-if="!WidgetMedia.fullScreen">
@@ -49,37 +46,10 @@
                         ng-if="WidgetMedia.item.data.audioUrl && !skipMediaPage">
                         <i class="btn btn-success glyphicon glyphicon-headphones" role="button" aria-label="Show {{WidgetMedia.item.data.title}} audio button"></i>
                     </a>
-                    <a ng-if="(WidgetMedia.item.data.srcUrl || WidgetMedia.item.data.audioUrl || WidgetMedia.item.data.videoUrl) && allowSource && WidgetMedia.online"
-                        ng-click="WidgetMedia.openLink(WidgetMedia.item)" target="_blank">
-                        <i class="glyphicon share glyphicon-link" role="button" aria-label="{{WidgetMedia.item.data.title}} source button"></i>
-                    </a>
-                </div>
-                <div class="li-actions">
-                        <i class="glyphicon icon bookmark" style="font-family: 'Glyphicons Halflings' !important;"
-                        ng-class="{ 'glyphicon-star-empty' : !WidgetMedia.item.data.bookmarked, 'glyphicon-star' : WidgetMedia.item.data.bookmarked }"
-                        ng-click="WidgetMedia.bookmark($event)" role="button" aria-label="Bookmark {{WidgetMedia.item.data.title}} button"></i>
-                        <i class="glyphicon glyphicon-option-horizontal" ng-click="WidgetMedia.showDrawer()" role="button" aria-label="{{WidgetMedia.item.data.title}} media item options"></i>
                 </div>
             </div>
             <p class="wysiwyg" ng-if="WidgetMedia.item.data.body" ng-bind-html="WidgetMedia.item.data.body | safeHtml">
             </p>
-            <div class="media-item-actions">
-                <div class="comments-action-section" ng-show="WidgetMedia.allowUserComment()">
-                    <span class="cursor-pointer" ng-click="WidgetMedia.openMediaComments()">
-                        Comment
-                    </span>
-                </div>
-            </div>
         </div>
     </div>
 </div>
-<script>
-    buildfire.appearance.getAppTheme((err, appTheme) => {
-             if (err) return console.error(err);
-             let viewsg = document.getElementById("viewsg")
-             let iconViewg = document.getElementById("iconViewg")
-
-             viewsg.style.color =  appTheme.colors.bodyText;
-             iconViewg.style.color =  appTheme.colors.icons;
-    });
-</script>
