--- a/widget/templates/layouts/item-1.html
+++ b/widget/templates/layouts/item-1.html
@@ -32,7 +32,7 @@
 
                 <div id="mediaActionIcons" class="media-action-icons" ng-init="WidgetMedia.initMediaActionIcons()"></div>
 
-                <p class="margin-bottom-zero word-break">{{WidgetMedia.item.data.summary}}</p>
+                <p class="margin-bottom-zero word-break media-summary">{{WidgetMedia.item.data.summary}}</p>
             </div>
         </div>
         <div class="padded padding-top-zero" ng-if="!WidgetMedia.fullScreen">
