--- a/widget/templates/layouts/item-2.html
+++ b/widget/templates/layouts/item-2.html
@@ -11,9 +11,7 @@
                                     <div class="people-info text-center col-xs-12">
                                         <h5 class="ellipsis margin-top-fifteen whiteTheme media-title" style="font-size: 16px;">
                                             {{WidgetMedia.item.data.title}}</h5>
-                                            <h5 data-ng-if="WidgetMedia.item.data.hasDownloadedVideo" class="margin-bottom-zero whiteTheme">Downloaded</h5>
-                                        <h5 class="whiteTheme media-summary">
-                                            {{WidgetMedia.item.data.summary}}</h5>
+                                        <h5 class="whiteTheme media-summary">{{WidgetMedia.item.data.summary}}</h5>
                                     </div>
                                 </div>
                             </div>
