refactor download UI

--- a/control/settings/templates/home.html
+++ b/control/settings/templates/home.html
@@ -57,10 +57,10 @@
 </div>
 
 <div class="row flex flex-align-start input-control margin-bottom-twenty side-label">
-    <label class="tooltip-container col-md-4">Allow Comments
+    <label class="tooltip-container col-md-4">Enable Comments
         <span class="btn-info-icon btn-primary">
             <span class="cp-tooltip">
-                Comments let users share thoughts and feedback. Choose who can use them.
+                Comments let users share thoughts on a media item. If enabled for users with specific tags, only those users can see and post comments.
             </span>
         </span>
     </label>
