--- a/widget/templates/layouts/item-1.html
+++ b/widget/templates/layouts/item-1.html
@@ -27,7 +27,12 @@
         </div>
         <div class="item-main-header" ng-if="!WidgetMedia.fullScreen">
             <div class="text-left padded word-break">
-                <h5 class="margin-top-zero word-break media-title">{{WidgetMedia.item.data.title}} <div data-ng-if="WidgetMedia.isDownloading(WidgetMedia.item)" class="lds-ring-small"></div></h5>
+                <h5 class="margin-top-zero word-break media-title">{{WidgetMedia.item.data.title}}
+                    <svg data-ng-if="(WidgetMedia.item.data.hasDownloadedVideo || WidgetMedia.item.data.hasDownloadedAudio) && allowOfflineDownload && !WidgetMedia.isDownloading(WidgetMedia.item)" xmlns="http://www.w3.org/2000/svg" width="15" height="16" viewBox="0 0 15 16" fill="none">
+                        <path d="M7.49996 0.916992C3.59704 0.916992 0.416626 4.09741 0.416626 8.00033C0.416626 11.9032 3.59704 15.0837 7.49996 15.0837C11.4029 15.0837 14.5833 11.9032 14.5833 8.00033C14.5833 4.09741 11.4029 0.916992 7.49996 0.916992ZM6.79163 6.58366V3.75033H8.20829V6.58366H10.3333L7.49996 9.41699L4.66663 6.58366H6.79163ZM11.0416 11.542H3.95829V10.1253H11.0416V11.542Z" fill="var(--bf-theme-success)"/>
+                    </svg>
+                    <span data-ng-if="WidgetMedia.isDownloading(WidgetMedia.item)" class="lds-ring-small"><div></div><div></div><div></div><div></div></span>
+                </h5>
                 <p class="margin-bottom-fifteen word-break media-summary">{{WidgetMedia.item.data.summary}}</p>
 
                 <media-action-icons widget-media="WidgetMedia" on-icon-action="WidgetMedia.handleIconAction(actionId)" class="media-action-icons"></media-action-icons>
