handle small screens

--- a/widget/assets/css/media.css
+++ b/widget/assets/css/media.css
@@ -78,6 +78,9 @@ h5 {
     height: 40px;
 }
 
+.media-action-icons .media-action-icon-element#reactions img {
+    filter: unset !important;
+}
 .media-action-icons .media-action-icon-element#reactions {
     width: fit-content;
     min-width: 40px;
@@ -615,9 +618,21 @@ button.btn-icon.btn-lg {
         padding: 8px 0;
     }
 }
-@media (max-width: 310px) {
+@media (max-width: 325px) {
     .second-layout .media-action-icons .action-icons-holder {
-        gap: 0px;
+        gap: 10px;
+    }
+    .second-layout .media-action-icons .media-action-icon-element {
+        width: 30px;
+        height: 30px;
+    }
+    .second-layout .media-action-icons .media-action-icon-element#reactions {
+        width: fit-content;
+        min-width: 30px;
+    }
+    .second-layout .media-action-icons .media-action-icon-element#reactions .reactions-total-count {
+        width: fit-content;
+        min-width: 1.25rem;
     }
     .second-layout .item-actions {
         gap: 6px;
